<resources>
    <string name="app_website">http://www.daydreaming-the-app.net</string>
    <string name="app_mail">contact@daydreaming-the-app.net</string>
    <string name="menu_settings">Settings</string>
    <string name="dashboard_title_activity">Dashboard</string>
    <string name="dashboard_text_experiment_is">EXPERIMENT IS</string>
    <string name="dashboard_text_exp_running">RUNNING</string>
    <string name="dashboard_text_exp_paused">PAUSED</string>
    <string name="dashboard_text_exp_stopped">STOPPED</string>
    <string name="dashboard_text_days_elapsed">Days elapsed</string>
    <string name="dashboard_button_text_about">About</string>
    <string name="dashboard_button_text_terms">Terms</string>
    <string name="dashboard_button_text_description">Description</string>
    <string name="dashboard_text_enable_internet">Please enable internet</string>
    <string name="dashboard_text_error_will_retry1">Error updating parameters\nTrying again in</string>
    <string name="dashboard_text_error_will_retry2">seconds</string>
    <string name="dashboard_text_parameters_updating">Parameters are updating…</string>
    <string name="dashboard_button_text_glossary">Glossary</string>
    <string name="dashboard_text_days">days</string>
    <string name="dashboard_text_day">day</string>
    <string name="dashboard_text_results_in">Results in</string>
    <string name="dashboard_text_see_results">See results</string>
    <string name="dashboard_button_change_data_settings">Data Settings</string>
    <string name="dashboard_test_text_sync_now">Sync Now</string>
    <string name="dashboard_test_text_morningQuestionnaire">Test Morning</string>
    <string name="dashboard_test_text_eveningQuestionnaire">Test Evening</string>
    <string name="dashboard_test_text_reload_parameters">Reload parameters</string>
    <string name="dashboard_text_begin_questionnaires">Questions</string>
    <string name="dashboard_button_text_instruction">Instructions</string>
    <string name="dashboard_you_missed">You missed a probe about</string>
    <string name="dashboard_you_dismissed">You dismissed a probe about</string>
    <string name="dashboard_you_started">You started answering a probe about</string>
    <string name="dashboard_hour">hour</string>
    <string name="dashboard_hours">hours</string>
    <string name="dashboard_minute">minute</string>
    <string name="dashboard_minutes">minutes</string>
    <string name="dashboard_ago">ago</string>
    <string name="dashboard_swipe_to_get_back">Swipe horizontally to get it back.</string>
    <string name="results_notification_ticker">Daydreaming results available</string>
    <string name="results_notification_title">Daydreaming results</string>
    <string name="results_notification_content">Discover your 30 days of daydreaming</string>
    <string name="results_never_downloaded">Your results were never downloaded yet. Depending on your activity, they can take up to 10MB and are best downloaded over wifi. Proceed?</string>
    <string name="results_never_downloaded_yes">Download results</string>
    <string name="results_never_downloaded_no">Not now</string>
    <string name="results_refresh_download1">Your local copy of results is</string>
    <string name="results_refresh_download2">old. Do you want to refresh them? This can take up to 10MB, and is best done over wifi.</string>
    <string name="results_refresh_download_yes">Refresh results</string>
    <string name="results_refresh_download_no">Use cache</string>
    <string name="results_share_title">Share results to…</string>
    <string name="results_share_text">Check out my results after a month using Daydreaming! http://daydreaming-the-app.net/</string>
    <string name="results_save_title">Save raw results to…</string>
    <string name="dashboard_toast_experiment_not_running">Experiment hasn\'t started yet!</string>
    <string name="dashboard_toast_not_connected">You\'re not connected to the internet!</string>
    <string name="dashboard_parameters_not_loaded">Parameters aren\'t loaded yet</string>
    <string name="dashboard_alert_download_results">Download results</string>
    <string name="dashboard_alert_title_refresh_results">Refresh results</string>
    <string name="sv_questions_title">Questions</string>
    <string name="sv_questions_text">When blinking, there are questions for you!</string>
    <string name="sv_settings_title">Settings</string>
    <string name="sv_settings_text">Set the app parameters</string>
    <string name="sv_glossary_title">Glossary</string>
    <string name="sv_glossary_text">A list of useful definitions</string>
    <string name="sv_results_title">Results</string>
    <string name="sv_results_text">When available, a detailed report for you here!</string>
    <string name="sv_swipe_title">Share your daydream!</string>
    <string name="sv_swipe_text">Swipe horizontally if you can\'t wait for notifications</string>
    <string name="sv_time_elapsed_title">Time Elapsed</string>
    <string name="sv_time_elapsed_text">The duration you have been running this app</string>
    <string name="sv_time_left_title">Time Left</string>
    <string name="sv_time_left_text">The duration left before you get results</string>
    <string name="glossary_title">GLOSSARY</string>
    <string name="glossary_explanation_title">What\'s this?</string>
    <string name="glossary_explanation_text">This glossary contains explanations for words you will encounter in the questions. When answering questions, touch the words in blue to see the definitions!</string>
    <string name="credits_text_title_about">ABOUT</string>
    <string name="credits_text_main1">
    This App has been developed by a team of French researchers in Paris, London and Berlin.
    \nScience en Poche ("Science in your pocket") kindly supports this project.</string>
    <string name="credits_text_main2">We do other apps too. For more information, feel free to visit our website</string>
    <string name="credits_website">www.daydreaming-the-app.net</string>
    <string name="credits_text_title_our_team">OUR TEAM</string>
    <string name="vincent_name">Vincent Adam</string>
    <string name="vincent_description">Phd Student at UCL \nGatsby Unit</string>
    <string name="sebastien_name">Sébastien Lerique</string>
    <string name="sebastien_description">Phd Student in Berlin\nCentre Marc Bloch</string>
    <string name="mikael_name">Mikaël Bastian</string>
    <string name="mikael_description">Phd Student in Paris \nÉcole Normale Supérieure</string>
    <string name="gislain_name">Gislain Delaire</string>
    <string name="gislain_description">Designer in Paris</string>
    <string name="jerome_name">Jérôme Sackur</string>
    <string name="jerome_description">Cognitive Psychologist in Paris \nÉcole Normale Supérieure</string>
    <string name="credits_institution1">inst1</string>
    <string name="credits_institution2">inst2</string>
    <string name="credits_institution3">inst3</string>
    <string name="credits_institution4">inst4</string>
    <string name="credits_institution5">inst5</string>
    <string name="firstLaunchWelcome_title_activity">Daydreaming</string>
    <string name="firstLaunchWelcome_text_welcome">Daydreaming Experiment</string>
    <string name="firstLaunchDescription_title_activity">Description</string>
    <string name="firstLaunchDescription_text_title">WELCOME TO\nTHE DAYDREAMING APP!</string>
    <string name="firstLaunchDescription_button_next">Next</string>
    <string name="firstLaunchTerms_title_activity">Consent</string>
    <string name="firstLaunchTerms_text_title">CONSENT</string>
    <string name="firstLaunchTerms_button_agree">Agree</string>
    <string name="firstLaunchTerms_button_disagree">Disagree</string>
    <string name="firstLaunchTerms_text_please_scroll">Scroll down terms</string>
    <string name="firstLaunchTerms_text_more_consent">More information</string>
    <string name="time_window_lb">From</string>
    <string name="time_window_ub">Until</string>
    <string name="time_window_settings">Time window for notifications</string>
    <string name="notifications_settings">Notifications</string>
    <string name="settings_picker_positive">Set</string>
    <string name="settings_picker_negative">Cancel</string>
    <string name="settings_title_activity">Settings</string>
    <string name="settings_time_corrected_1">Please allow polls for at least</string>
    <string name="settings_time_corrected_2">hours in the day! The time settings have been reset to default.</string>
    <string name="appsettings_title">SETTINGS</string>
    <string name="appsettings_notification_title">Notifications</string>
    <string name="appsettings_time_title">Only ask questions</string>
    <string name="appsettings_time_from">From </string>
    <string name="appsettings_time_until">Until </string>
    <string name="appsettings_allow_blink_text">Blinks at questions</string>
    <string name="appsettings_allow_vibrations_text">Vibrates at questions</string>
    <string name="appsettings_allow_sound_text">Beeps at questions</string>
    <string name="settings_time_window_lb_default">8:00</string>
    <string name="settings_time_window_ub_default">22:00</string>
    <string name="settings_erase_my_data">Erase my data</string>
    <string name="appsettings_warning_data_erase">You won\'t be able to see your results any longer</string>
    <string name="appsettings_dialog_button_erase_data">Erase anyway</string>
    <string name="appsettings_dialog_button_keep_data">No, keep my data</string>
    <string name="firstLaunchProfile_title_activity">Profile</string>
    <string name="firstLaunchProfile_title_about_you">A LITTLE ABOUT YOU</string>
    <string name="firstLaunchProfile_hint_age">Age</string>
    <string name="firstLaunchProfile_fix_age">Please enter an age between 5 and 100</string>
    <string name="firstLaunchProfile_text_gender">Gender</string>
    <string name="firstLaunchProfile_text_education">Education</string>
    <string name="firstLaunchProfile_text_mother_tongue">Mother Tongue</string>
    <string name="firstLaunchProfile_hint_mother_tongue">type</string>
    <string name="firstLaunchProfile_text_age">Age</string>
    <string name="firstLaunchProfile_Spinner_gender_prompt">Select your gender</string>
    <string name="firstLaunchProfile_Spinner_education_prompt">Select your education</string>
    <string name="firstLaunchProfile_Spinner_age_prompt">Select your age</string>
    <string name="Questionnaire_intro">Here are a number of personality traits that may or may not apply to you.  Please select the statement to indicate the extent to which you agree or disagree with each statement. You should rate the extent to which the pair of traits applies to you, even if one characteristic applies more strongly than the other. </string>
    <string name="Questionnaire_title">PERSONALITY\nQUESTIONNAIRE</string>
    <string name="begin_questionnaires_title_activity">Begin Questionnaires</string>
    <string name="firstLaunchPull_title_activity">Pull Questions</string>
    <string name="firstLaunchPull_text_intro">We will now fetch content from our servers.\nThis should take no more than a few seconds</string>
    <string name="firstLaunchPull_text_downloading">Download : Waiting for connection</string>
    <string name="firstLaunchPull_text_data_enabled">Network connection</string>
    <string name="firstLaunchPull_text_settings_necessary">You are not connected to the internet, please change your settings.</string>
    <string name="firstLaunchPull_button_settings">Settings</string>
    <string name="page_welcome_text">HERE ARE A FEW QUICK QUESTIONS:</string>
    <string name="page_button_next">Next</string>
    <string name="page_button_finish">Finish</string>
    <string name="page_thank_you">Great! That\'s recorded</string>
    <string name="page_intro_text">Right before the app interrupted you…</string>
</resources>