<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="@dimen/global_scrollview_padding"
                >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/global_text_in_scrollview_side_padding"
                    android:paddingRight="@dimen/global_text_in_scrollview_side_padding"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credits_text_title_about"
                        android:singleLine="true"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="@style/ui_font_title_bold"
                        android:textColor="@color/ui_white_text_color"
                        android:layout_marginTop="@dimen/global_text_titleTopMargin"
                        android:layout_marginBottom="@dimen/global_title_body_vertical_padding"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/credits_text_main1"
                        android:textAppearance="@style/ui_font_title"
                        android:textColor="@color/ui_white_text_color"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="20dp"
                        android:src="@drawable/icon_terms" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/credits_text_main2"
                        android:textAppearance="@style/ui_font_title"
                        android:textColor="@color/ui_white_text_color"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/credits_website_link"
                        android:text="@string/credits_website"
                        android:textAppearance="@style/ui_font_title"
                        android:textColor="@color/ui_white_text_color"/>

                </LinearLayout>

            </RelativeLayout>




            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="@dimen/global_text_in_scrollview_side_padding"
                android:paddingRight="@dimen/global_text_in_scrollview_side_padding"
                android:background="@color/ui_white_text_color">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/global_text_in_scrollview_side_padding"
                    android:paddingRight="@dimen/global_text_in_scrollview_side_padding">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credits_text_title_our_team"
                        android:singleLine="true"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="@style/ui_font_title_bold"
                        android:textColor="@color/ui_blue_background_color"
                        android:layout_marginTop="@dimen/global_text_titleTopMargin"
                        android:layout_marginBottom="@dimen/global_title_body_vertical_padding"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vincent_name"
                        android:textAppearance="@style/ui_font_title_bold"
                        android:textColor="@color/ui_blue_background_color"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vincent_description"
                        android:textAppearance="@style/ui_font_title"
                        android:textColor="@color/ui_blue_background_color"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:src="@drawable/icon_terms" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sebastien_name"
                        android:textAppearance="@style/ui_font_title_bold"
                        android:textColor="@color/ui_blue_background_color"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sebastien_description"
                        android:textAppearance="@style/ui_font_title"
                        android:textColor="@color/ui_blue_background_color"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:src="@drawable/icon_terms" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mikael_name"
                        android:textAppearance="@style/ui_font_title_bold"
                        android:textColor="@color/ui_blue_background_color"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mikael_description"
                        android:textAppearance="@style/ui_font_title"
                        android:textColor="@color/ui_blue_background_color"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:src="@drawable/icon_terms" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gislain_name"
                        android:textAppearance="@style/ui_font_title_bold"
                        android:textColor="@color/ui_blue_background_color"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gislain_description"
                        android:textAppearance="@style/ui_font_title"
                        android:textColor="@color/ui_blue_background_color"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:src="@drawable/icon_terms" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
        
    </ScrollView>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">

        <ImageButton
            android:layout_width="@dimen/return_to_dashboard_button_size_withmargin"
            android:layout_height="@dimen/return_to_dashboard_button_size_withmargin"
            android:padding="@dimen/return_to_dashboard_button_margin"
            android:scaleType="fitCenter"
            android:onClick="onClick_backToDashboard"
            android:src="@drawable/dashboard_arrow"
            android:background="@null"
            android:contentDescription="@null"
            />
    </LinearLayout>

</RelativeLayout>
