
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/global_scrollview_padding"
    android:scrollbarSize="@dimen/global_scrollbarSize"
    android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
    >

    <RelativeLayout
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id = "@+id/firstLaunchProfile_spinners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/global_text_in_scrollview_side_padding"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:id="@+id/firstLaunchProfile_ballonlayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <ImageView
                    android:id="@+id/firstLaunchProfile_ballon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/airship"
                    />

                <ImageView
                    android:id="@+id/firstLaunchProfile_helice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:background="@drawable/helice2"
                    android:layout_marginTop="3dp"/>
            </RelativeLayout>


            <TextView
                android:id="@+id/firstLaunchProfile_titleAboutYou"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_title_vertical_space"
                android:layout_marginBottom="@dimen/profile_title_vertical_space"
                android:gravity="center_horizontal"
                android:text="@string/firstLaunchProfile_title_about_you"
                android:textAppearance="@style/ui_font_big_title_bold"
                android:textColor="@color/ui_white_text_color"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/profile_field_vertical_spacing">


                <TextView
                    android:id="@+id/firstLaunchProfile_textAge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:layout_marginRight="@dimen/profile_field_to_spinner_margin"
                    android:text="@string/firstLaunchProfile_text_age"
                    android:textAppearance="@style/ui_font_title"
                    android:textColor="@color/ui_white_text_color"/>

                <Spinner
                    android:id="@+id/firstLaunchProfile_ageSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:paddingRight="@dimen/profile_spinner_side_padding"
                    android:paddingLeft="@dimen/profile_spinner_side_padding"
                    android:prompt="@string/firstLaunchProfile_Spinner_age_prompt"
                    android:background="@drawable/profile_spinner_box_selector" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/profile_field_vertical_spacing">

                <TextView
                    android:id="@+id/firstLaunchProfile_textGender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:layout_marginRight="@dimen/profile_field_to_spinner_margin"
                    android:text="@string/firstLaunchProfile_text_gender"
                    android:textAppearance="@style/ui_font_title"
                    android:textColor="@color/ui_white_text_color"/>

                <Spinner
                    android:id="@+id/firstLaunchProfile_genderSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:paddingRight="@dimen/profile_spinner_side_padding"
                    android:paddingLeft="@dimen/profile_spinner_side_padding"
                    android:prompt="@string/firstLaunchProfile_Spinner_gender_prompt"
                    android:background="@drawable/profile_spinner_box_selector"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/profile_field_vertical_spacing"
                >

                <TextView
                    android:id="@+id/firstLaunchProfile_textEducation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:layout_marginRight="@dimen/profile_field_to_spinner_margin"
                    android:text="@string/firstLaunchProfile_text_education"
                    android:textAppearance="@style/ui_font_title"
                    android:textColor="@color/ui_white_text_color"/>

                <Spinner
                    android:id="@+id/firstLaunchProfile_educationSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:singleLine = "true"
                    android:paddingRight="@dimen/profile_spinner_side_padding"
                    android:paddingLeft="@dimen/profile_spinner_side_padding"
                    android:prompt="@string/firstLaunchProfile_Spinner_education_prompt"
                    android:background="@drawable/profile_spinner_box_selector"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:focusableInTouchMode="true"
                android:layout_marginBottom="@dimen/profile_field_vertical_spacing"
                >

                <TextView
                    android:id="@+id/firstLaunchProfile_textMotherTongue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:layout_marginRight="@dimen/profile_field_to_spinner_margin"
                    android:text="@string/firstLaunchProfile_text_mother_tongue"
                    android:textAppearance="@style/ui_font_title"
                    android:textColor="@color/ui_white_text_color"/>

                <AutoCompleteTextView
                    android:id="@+id/firstLaunchProfile_motherTongueAutoCompleteTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:singleLine = "true"
                    android:hint="@string/firstLaunchProfile_hint_mother_tongue"
                    android:textColorHint="@color/ui_blue_background_color"
                    android:paddingBottom="@dimen/profile_spinner_text_vertical_padding"
                    android:paddingTop="@dimen/profile_spinner_text_vertical_padding"
                    android:paddingLeft="@dimen/profile_editText_text_left_padding"
                    android:textColor="@color/ui_blue_background_color"
                    android:background="@drawable/profile_spinner_box"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstLaunchProfile_spinners"
            android:layout_marginBottom="@dimen/next_button_bottom_margin"
            android:layout_marginRight="@dimen/next_button_right_margin"
            android:gravity="right">


            <ImageButton
                android:id="@+id/firstLaunchProfile_buttonNext"
                android:layout_width="@dimen/button_next_width"
                android:layout_height="@dimen/button_next_height"
                android:onClick="onClick_buttonNext"
                android:text="@string/firstLaunchDescription_button_next"
                android:contentDescription="@null"
                android:background="@drawable/button_cloud_next_selector"
                />


        </LinearLayout>

    </RelativeLayout>

</ScrollView>
